Fix contrast on error message

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -195,7 +195,7 @@ a.btn {
 }
 
 #error-message {
-    color: #d9534f;
+    color: #a80000;
 }
 
 .icon {
